--- a/Website/our_larning_website_style.css
+++ b/Website/our_larning_website_style.css
@@ -2,27 +2,70 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Kalam", cursive;
+  text-decoration: none;
+}
+html {
+  font-size: 62.5%;
+}
+body,
+html {
+  scroll-behavior: smooth;
+  /* font-family: "Kalam", cursive; */
+  line-height: 1.4;
+  color: white;
+}
+body {
+  font-size: 1.4rem;
+}
+.container {
+  max-width: 1300px;
+  margin: 0 auto;
+}
+a {
+  text-decoration: none;
+  color: white;
+}
+ul {
+  list-style: none;
 }
 header {
-  background-color: rgba(0, 238, 255, 0.527);
+  background-color: #0089b7;
 }
-.display {
-  margin: 0 auto;
-  max-width: 1300px;
-}
-.logo_nav {
+nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 10px 0;
+  padding: 1rem;
 }
-.left-logo img {
-  max-width: 300px;
-  max-height: 120px;
-  border-radius: 10%;
+nav li {
+  font-size: 1.8rem;
+  transition: 0.3s ease-in-out;
+  position: relative;
+  padding: 0 0.4rem;
+  margin: 0 0.4rem;
 }
-.header_name {
-  font-size: 3.5rem;
-  color: rgb(202, 187, 49);
+nav ul a li::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 3px;
+  background: #000;
+  left: 0;
+  bottom: -1px;
+  border-radius: 5px;
+  transform: scaleX(0);
+  transition: transform 0.5s;
+  transform-origin: right;
+}
+nav ul a li:hover::after {
+  transform: scaleX(1);
+  transform-origin: left;
+}
+nav ul {
+  display: flex;
+  gap: 1rem;
+}
+.logo {
+  font-size: 2.2rem;
+  font-weight: 700;
 }
