--- a/Website/our_larning_website_style.css
+++ b/Website/our_larning_website_style.css
@@ -10,12 +10,14 @@ html {
 body,
 html {
   scroll-behavior: smooth;
-  /* font-family: "Kalam", cursive; */
+  font-family: "Kalam", cursive;
   line-height: 1.4;
   color: white;
+  letter-spacing: 0.12rem;
 }
 body {
   font-size: 1.4rem;
+  position: relative;
 }
 .container {
   max-width: 1300px;
@@ -30,14 +32,18 @@ ul {
 }
 header {
   background-color: #0089b7;
+  position: fixed;
+  width: 100%;
+  box-shadow: 3px 3px 5px rgb(138, 136, 136);
 }
 nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1rem;
+  padding: 1.5rem 0;
 }
 nav li {
+  color: #9af038;
   font-size: 1.8rem;
   transition: 0.3s ease-in-out;
   position: relative;
@@ -49,7 +55,7 @@ nav ul a li::after {
   position: absolute;
   width: 100%;
   height: 3px;
-  background: #000;
+  background: #43ecde;
   left: 0;
   bottom: -1px;
   border-radius: 5px;
@@ -66,6 +72,26 @@ nav ul {
   gap: 1rem;
 }
 .logo {
-  font-size: 2.2rem;
+  font-size: 3.5rem;
   font-weight: 700;
+  color: #43ecde;
+}
+.background_pic {
+  background-image: url(../All_Image/wallpaper/wallpaperflare.com_wallpaper\ _laptop.jpg);
+  background-position: center;
+  background-attachment: scroll;
+  background-repeat: no-repeat;
+  background-size: cover;
+  min-height: 100vh;
+}
+.heading {
+  display: flex;
+  text-align: center;
+  justify-content: left;
+  align-items: center;
+  color: red;
+  font-size: 10rem;
+  height: 100vh;
+}
+.background_pic {
 }
