--- a/Website/our_larning_website_style.css
+++ b/Website/our_larning_website_style.css
@@ -17,7 +17,6 @@ html {
 }
 body {
   font-size: 1.4rem;
-  position: relative;
 }
 .container {
   max-width: 1300px;
@@ -85,13 +84,43 @@ nav ul {
   min-height: 100vh;
 }
 .heading {
+  margin-left: -180px;
   display: flex;
-  text-align: center;
+  text-align: left;
   justify-content: left;
   align-items: center;
-  color: red;
-  font-size: 10rem;
+  color: rgb(70, 179, 124);
   height: 100vh;
 }
-.background_pic {
+.typewriter p {
+  font-family: serif;
+  font-size: 6rem;
+  overflow: hidden;
+  /* Ensures the content is not revealed until the animation */
+  border-right: 0.4rem solid rgb(61, 111, 153); /* The typwriter cursor */
+  white-space: nowrap; /* Keeps the content on a single line */
+  margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+  letter-spacing: 0.2rem; /* Adjust as needed */
+  animation: typing 7s steps(40, end), blink-caret 1.5s step-end infinite;
+}
+
+/* The typing effect */
+@keyframes typing {
+  from {
+    width: 0;
+  }
+  to {
+    width: 34%;
+  }
+}
+
+/* The typewriter cursor effect */
+@keyframes blink-caret {
+  from,
+  to {
+    border-color: transparent;
+  }
+  50% {
+    border-color: rgb(61, 111, 153);
+  }
 }
