--- a/Website/our_larning_website_style.css
+++ b/Website/our_larning_website_style.css
@@ -124,3 +124,69 @@ nav ul {
     border-color: rgb(61, 111, 153);
   }
 }
+.hr {
+  border-bottom: 5px solid #0089b7;
+}
+main {
+  background-color: rgba(15, 59, 117, 0.959);
+}
+.main_div {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+.Shourav_name {
+  letter-spacing: 0.16rem;
+  font-size: 2.7rem;
+  padding-bottom: 0.5rem;
+  color: rgba(0, 255, 255, 0.829);
+}
+/* Classes Section Starts Hare  */
+.classes_container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+  gap: 2rem;
+}
+.grid_item {
+  display: grid;
+  place-items: center;
+}
+.img_class {
+  width: 320px;
+  display: flex;
+  flex-direction: column;
+  border-radius: 0.7rem;
+  overflow: hidden;
+  transition: 0.2s ease-in-out;
+}
+.img_class:hover {
+  transform: scale(1.05);
+  transition: 1s ease-in-out;
+}
+.img_class:hover img {
+  transform: scale(1.05);
+  transition: 0.5s ease-in-out;
+  opacity: 0.8;
+}
+.img_class:hover .classes_contant {
+  background-color: white;
+  color: green;
+  transform: translateY(0);
+}
+.classes_contant {
+  padding: 2rem;
+  position: relative;
+  top: -6.5rem;
+  margin-bottom: -6.5rem;
+  transition: 0.7s ease-in-out;
+  border-radius: 0.6rem;
+  transform: translateY(400px);
+}
+.classes_contant h3 {
+  text-align: center;
+  font-size: 1.7rem;
+  letter-spacing: 0.15rem;
+}
+.classes_contant h3 .bg_letter {
+  font-size: 2.2rem;
+}
+/* Classes Section End Hare  */
