--- a/Website/our_larning_website_style.css
+++ b/Website/our_larning_website_style.css
@@ -19,6 +19,7 @@ body {
   font-size: 1.4rem;
 }
 .container {
+  padding: 2rem;
   max-width: 1300px;
   margin: 0 auto;
 }
@@ -189,4 +190,17 @@ main {
 .classes_contant h3 .bg_letter {
   font-size: 2.2rem;
 }
+.classes_contant h3 .mg_letter {
+  font-size: 2rem;
+}
 /* Classes Section End Hare  */
+/* Classes Section SEC_2 Starts Hare  */
+.SEC_2 .img_class {
+  width: 320px;
+  height: 180px;
+}
+.SEC_2 .img_class img {
+  width: 320px;
+  height: 180px;
+}
+/* Classes Section SEC_2 End Hare  */
