--- a/Website/our_larning_website_style.css
+++ b/Website/our_larning_website_style.css
@@ -35,6 +35,7 @@ header {
   position: fixed;
   width: 100%;
   box-shadow: 3px 3px 5px rgb(138, 136, 136);
+  z-index: 100;
 }
 nav {
   display: flex;
