--- a/Habibur_Rahman/habibur_style.css
+++ b/Habibur_Rahman/habibur_style.css
@@ -20,8 +20,8 @@ html {
 }
 .header_image,
 .header_image img {
-  width: 300px;
-  height: 360px;
+  width: 350px;
+  /* height: 360px; */
   border-radius: 50%;
 }
 .nav_contant {
